# Rust-WakeOnLAN

./: Cargo.toml  README.md  build.rs  tray-icons.rc
.github/workflows/: rust.yml
src/: config.rs  magic.rs  main.rs  tray.rs  win32_dialog.rs
