[package]
name = "MagicPacket"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tray-item = "0.10.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Security",
] }

[build-dependencies]
embed-resource = "3.0.6"
